objects/POC_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Site_1_HW__c</fullName>
        <label>HW</label>
        <picklist>
            <picklistValues>
                <fullName>ASA FW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blade - FX8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Celerra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLARiiON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNT - 3000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DataDomain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMX-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMX-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMX-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESX Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCIP – 7500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCIP – 7800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCIP – MDS 9000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Load Balancer – F5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Load Balancer – Foundry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NetApp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nexus – 5000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nexus – 7000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router – 1000 ASR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router – 12000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router – 2600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router – 2900 ISR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router – 3900 ISR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router – 7200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router – 7600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router – 9000 ASR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router – ESeries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router – J2300</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Site_1_Name__c</fullName>
        <label>Site 1 Name</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_1_OS_Versions__c</fullName>
        <label>OS Versions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Site_2_Address__c</fullName>
        <label>Address</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Site_2_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>POCSummaries (Site 2 Contact)</relationshipLabel>
        <relationshipName>POCSummaries4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_2_HW_Vendors__c</fullName>
        <label>HW Vendors</label>
        <picklist>
            <picklistValues>
                <fullName>Brocade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commvault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DoubleTake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EqualLogic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extreme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Juniper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NetApp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other HW Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tivoli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VMWare</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Site_2_HW__c</fullName>
        <label>HW</label>
        <picklist>
            <picklistValues>
                <fullName>ASA FW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blade - FX8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Celerra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLARiiON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNT - 3000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DataDomain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMX-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMX-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMX-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESX Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCIP – 7500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCIP – 7800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCIP – MDS 9000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Load Balancer – F5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Load Balancer – Foundry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NetApp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nexus – 5000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nexus – 7000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router – 1000 ASR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router – 12000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router – 2600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router – 2900 ISR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router – 3900 ISR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router – 7200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router – 7600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router – 9000 ASR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router – ESeries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router – J2300</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Site_2_Name__c</fullName>
        <label>Site 2 Name</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_2_OS_Versions__c</fullName>
        <label>OS Versions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Site_3_Address__c</fullName>
        <label>Address</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Site_3_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>POCSummaries (Site 3 Contact)</relationshipLabel>
        <relationshipName>POCSummaries5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_3_HW_Vendors__c</fullName>
        <label>HW Vendors</label>
        <picklist>
            <picklistValues>
                <fullName>Brocade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commvault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DoubleTake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EqualLogic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extreme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Juniper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NetApp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other HW Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tivoli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VMWare</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Site_3_HW__c</fullName>
        <label>HW</label>
        <picklist>
            <picklistValues>
                <fullName>ASA FW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blade - FX8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Celerra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLARiiON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNT - 3000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DataDomain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMX-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMX-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMX-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESX Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCIP – 7500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCIP – 7800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCIP – MDS 9000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Load Balancer – F5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Load Balancer – Foundry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NetApp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nexus – 5000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nexus – 7000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router – 1000 ASR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router – 12000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router – 2600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router – 2900 ISR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router – 3900 ISR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router – 7200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router – 7600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router – 9000 ASR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router – ESeries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router – J2300</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Site_3_Name__c</fullName>
        <label>Site 3 Name</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_3_OS_Versions__c</fullName>
        <label>OS Versions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>if( Email_Report__c ,&apos;Email Sent&apos;, &apos;Draft&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_Criteria_Obj1__c</fullName>
        <label>Success Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Success_Criteria_Obj2__c</fullName>
        <label>Success Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Success_Criteria_Obj3__c</fullName>
        <label>Success Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Testing_Notes__c</fullName>
        <inlineHelpText>When choosing Other in the what will be tested list, please elaborate on it here</inlineHelpText>
        <label>Testing Notes</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Verified_BW_Mbps_Link1__c</fullName>
        <label>Verified BW (Mbps)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Verified_BW_Mbps_Link2__c</fullName>
        <label>Verified BW (Mbps)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Verified_BW_Mbps_Link3__c</fullName>
        <label>Verified BW (Mbps)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Verified_Loss_Link1__c</fullName>
        <label>Verified Loss (%)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Verified_Loss_Link2__c</fullName>
        <label>Verified Loss (%)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Verified_Loss_Link3__c</fullName>
        <label>Verified Loss (%)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Verified_RTT_ms_Link1__c</fullName>
        <label>Verified RTT (ms)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Verified_RTT_ms_Link2__c</fullName>
        <label>Verified RTT (ms)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Verified_RTT_ms_Link3__c</fullName>
        <label>Verified RTT (ms)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>What_wll_be_tested__c</fullName>
        <label>What wll be tested</label>
        <picklist>
            <picklistValues>
                <fullName>3Par</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aspera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avamar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brocade 7500 FCIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brocade Protocol 61</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Celerra Replicator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIFS – SMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIFS – SMB2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citrix VDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citrix XenApp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clearcase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commvault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DataDomain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DL3D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DoubleTake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equallogic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDS Universal Replicator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HTTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM DB2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interwoven</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LDAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lotus Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAPI</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>POC Summary</label>
    <listViews>
        <fullName>POCList</fullName>
        <columns>NAME</columns>
        <columns>POC_Account__c</columns>
        <columns>POC_For__c</columns>
        <columns>POC_Status__c</columns>
        <columns>RSM_Contact__c</columns>
        <columns>SE_Contact__c</columns>
        <columns>POC_Start_Date__c</columns>
        <columns>POC_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>POC Summaries</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Reference Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POCSummaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>